<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CustomerUpdate">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_border"
            android:padding="5dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_margin="15dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.033"
                app:srcCompat="@drawable/avatar" />

            <TextView
                android:id="@+id/CustomerName"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/merriweather"
                android:text="@string/username"
                android:textColor="#D0C0C0"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                app:layout_constraintStart_toEndOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@+id/profileImage" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:backgroundTint="#EB2222"
                android:fontFamily="@font/kurale"
                android:paddingHorizontal="15dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:icon="@drawable/delete"
                app:iconGravity="end"
                app:iconTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Date Filter -->
    <TextView
        android:id="@+id/dateFilter"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweather"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <!-- Dropdown Menu -->
    <Spinner
        android:id="@+id/dropdownMenu"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_margin="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_background"
        android:dropDownWidth="wrap_content"
        android:dropDownHorizontalOffset="10dp"
        android:dropDownVerticalOffset="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:popupBackground="@color/white"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/dateFilter"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <!-- Amount Summary Card (Added Below Dropdown) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/amountSummaryCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownMenu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="12dp">

            <!-- "You Will Give" Section -->
            <TextView
                android:id="@+id/txtYouWillGive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_will_give"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- "You Will Get" Section -->
            <TextView
                android:id="@+id/amountYouWillGive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_0"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtYouWillGive"
                app:layout_constraintStart_toStartOf="@+id/txtYouWillGive"
                app:layout_constraintTop_toBottomOf="@id/txtYouWillGive" />

            <TextView
                android:id="@+id/txtYouWillGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_will_get"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Total Amount -->

            <TextView
                android:id="@+id/amountYouWillGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_0"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtYouWillGet"
                app:layout_constraintStart_toStartOf="@+id/txtYouWillGet"
                app:layout_constraintTop_toBottomOf="@id/txtYouWillGet" />

            <TextView
                android:id="@+id/txtTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_amount"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtYouWillGet"
                app:layout_constraintStart_toEndOf="@+id/txtYouWillGive"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amountTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/txtTotalAmount"
                app:layout_constraintStart_toStartOf="@+id/txtTotalAmount"
                app:layout_constraintTop_toBottomOf="@id/txtTotalAmount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountSummaryCard"
        tools:listitem="@layout/amount_item" />

    <Button
        android:id="@+id/youGave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#F82828"
        android:text="@string/you_gave_u20b9"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/youGot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/youGot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#2ECC71"
        android:text="@string/you_got_u20b9"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/youGave" />


</androidx.constraintlayout.widget.ConstraintLayout>
